fix(tabs): correct active panel z-index

--- a/style/tabs.scss
+++ b/style/tabs.scss
@@ -73,6 +73,7 @@
 
     &--active {
       position: relative;
+      z-index: 1;
       opacity: 100%;
     }
   }
